--- a/src/components/myStyles.css
+++ b/src/components/myStyles.css
@@ -108,6 +108,46 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
+.chatArea-container {
+    display: flex;
+    flex-direction: column;
+    flex: 0.7;
+}
+.chatArea-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 10px;
+    margin: 10px;
+    border-radius: 20px;
+    background-color: white;
+}
+.header-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+}
+.messages-container{
+    background-color: aquamarine;
+    flex: 1;
+}
+.text-input-area {
+    background-color: white;
+    padding: 10px 10px;
+    margin: 10px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.search-box {
+    outline-width: 0;
+    border: none;
+    margin-left: 10;
+    font-size: 1.25rem;
+    color: rgba(0, 0, 0, 0.54);
+}
+
 
 
 
